syntax = "proto3";

package tests;

message Proto {
}

message ResultProto {
    string value_str = 1;
}

message UnknownProto {
    string value_str = 1;
}

message Person {
    string first_name = 1;
    string last_name = 2;
}

message GreetingRequest {
    Person person = 1;
    string message = 2;
}

message GreetingResponse {
    string greeting = 3;
}

message MyType {
    string string_field = 1;
}

message HelloWorkflowInputMessage {
    string first_name = 1;
    string last_name = 2;
}

message HelloWorkflowResultMessage {
    string message = 1;
}